# gnss-visualizer

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  coldstart.ubx  example.ubx  pyproject.toml  renovate.json  requirements-dev.in  requirements-dev.txt  requirements-test.txt  requirements.in  requirements.txt
.github/workflows/: check.yml  pre-commit.yml  python-publish.yml
scripts/: extract-ubx-messages.py
src/gnss_visualizer/: __main__.py  app.py  constants.py  conversions.py  main.py  plot.py  plot_handler.py  run_server.py  ubx_stream.py  ui_handler.py
src/gnss_visualizer/models/: plot.py
src/gnss_visualizer/plots/: __init__.py  cno.py  generic_plot.py  map.py
src/gnss_visualizer/protocols/: ubx.py
src/gnss_visualizer/translations/en/LC_MESSAGES/: messages.po
src/gnss_visualizer/translations/fi/LC_MESSAGES/: messages.po
tests/: conftest.py  test_conversions.py  test_file_reading.py  test_ubx_stream.py  test_ui_handler.py
